Began Work Fixing Beat Signal System
So, apparently C# events can only be caught by one object. I've started
making a new script called BeatSignalManager that will catch these
signals, and call a certain method on every BeatObject in the scene.

Another commit will be added tomorrow that will finish this script and
make it functional. (Need to create an array of references to every
BeatObject in the scene).

--- a/Project Will Unity/Project Will Unity.CSharp.csproj
+++ b/Project Will Unity/Project Will Unity.CSharp.csproj
@@ -58,12 +58,6 @@
     <Reference Include="UnityEngine.Networking">
       <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Networking">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.UI">
-      <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
@@ -75,6 +69,7 @@
     <Compile Include="Assets\Beat Detection\No Event - Example Mic Input\BeatDetectionExampleMic.cs" />
     <Compile Include="Assets\Beat Detection\No Event - Example\BeatDetectionExample.cs" />
     <Compile Include="Assets\BeatObject.cs" />
+    <Compile Include="Assets\BeatSignalManager.cs" />
     <Compile Include="Assets\OldPhasePlatform.cs" />
     <Compile Include="Assets\PhasePlatform.cs" />
     <Compile Include="Assets\Scripts\Character\MovementController.cs" />
