--- a/Project Will Unity/Project Will Unity.CSharp.csproj
+++ b/Project Will Unity/Project Will Unity.CSharp.csproj
@@ -58,12 +58,6 @@
     <Reference Include="UnityEngine.Networking">
       <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Networking">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.UI">
-      <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
@@ -76,14 +70,16 @@
     <Compile Include="Assets\Beat Detection\No Event - Example\BeatDetectionExample.cs" />
     <Compile Include="Assets\Scripts\Abstracts\BeatObject.cs" />
     <Compile Include="Assets\Scripts\Abstracts\Interactable.cs" />
+    <Compile Include="Assets\Scripts\Abstracts\OldBeatObject.cs" />
     <Compile Include="Assets\Scripts\BeatSignalManager.cs" />
     <Compile Include="Assets\Scripts\Character\MovementController.cs" />
-    <Compile Include="Assets\Scripts\Deprecated\OldPhasePlatform.cs" />
+    <Compile Include="Assets\Scripts\Deprecated\OlderPhasePlatform.cs" />
     <Compile Include="Assets\Scripts\EnemyAI.cs" />
     <Compile Include="Assets\Scripts\EnemyAvoider.cs" />
     <Compile Include="Assets\Scripts\EnemyProjectile.cs" />
     <Compile Include="Assets\Scripts\EnemySight.cs" />
     <Compile Include="Assets\Scripts\InteractableExample.cs" />
+    <Compile Include="Assets\Scripts\OldPhasePlatform.cs" />
     <Compile Include="Assets\Scripts\OrbitPlayer.cs" />
     <Compile Include="Assets\Scripts\PhasePlatform.cs" />
   </ItemGroup>
